# LAD2025

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c
03_Text/: randomize.sh
04_Debugging/: Makefile  ethalon1.txt  ethalon2.txt  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: .move.c.swp  Makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
07_Environmental/tests/: md5.sh  sha1.sh
08_I18n/: configure.ac
08_I18n/po/: POTFILES  ru.po
08_I18n/src/: Makefile.am  guesser.c
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  lab.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/tests/: Makefile.am  upstream.ts
11_Documenting/: Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: guesser.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  README.md  configure.ac
12_InstallPackaging/po/: POTFILES.in  ru.po
12_InstallPackaging/src/: Makefile.am  guesser.c  guesserlib.c  guesserlib.h
12_InstallPackaging/tests/: Makefile  Makefile.am  Makefile.in
